--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,7 @@
     <string name="status_text">Not currently fasting</string>
     <string name="current_time">Current time</string>
     <string name="end_time">Finish time</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_fasting_tracker">Fasting tracker</string>
 
 </resources>
