The users session is saved between fasting and not fasting.
-Need timer to start in second fragment.
- Notification reminders are slightly buggy. Test thoroughly.
-Notifications reset on phone restart.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,6 @@
     <string name="end_time">Finish time</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_fasting_tracker">Fasting tracker</string>
-    <string name="btnStop">Stop</string>
+    <string name="btnStop">Breakfast</string>
 
 </resources>
