--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,8 @@
     <string name="button">New Button</string>
     <string name="start_toggle">Start</string>
     <string name="status_text">Not currently fasting</string>
-    <string name="current_time">Current time</string>
-    <string name="end_time">Finish time</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="current_time">Now</string>
+    <string name="end_time">End</string>
     <string name="title_activity_fasting_tracker">Fasting tracker</string>
     <string name="btnStop">Breakfast</string>
 
