--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,15 +2,34 @@
 <resources>
 
     <string name="app_name">My Fasting Tracker</string>
-    <string name="hello_world">Hello world!</string>
+
     <string name="action_settings">Settings</string>
-    <string name="button">New Button</string>
+
     <string name="start_toggle">Start</string>
     <string name="status_text">Not currently fasting</string>
+
     <string name="current_time">Now</string>
     <string name="end_time">End</string>
     <string name="title_activity_fasting_tracker">Fasting tracker</string>
     <string name="btnStop">Breakfast</string>
     <string name="title_activity_fasting_log">FastingLogActivity</string>
+    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
+
+    <string name="reminder_toggle_body">Temporarily deactivate all reminders </string>
+
+    <string-array name="menu_array">
+        <item>Home</item>
+        <item>Timer</item>
+        <item>Reminders</item>
+        <item>Log</item>
+        <item>Settings</item>
+        <item>About</item>
+    </string-array>
+
+
+    <string name="navdrawer_open">Open navigation drawer</string>
+    <string name="navdrawer_close">Close navigation drawer</string>
+    <string name="action_example">Example action</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
