--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,19 +5,34 @@
 
     <string name="action_settings">Settings</string>
 
-    <string name="start_toggle">Start</string>
-    <string name="status_text">Not currently fasting</string>
+    <string name="current_time">NOW</string>
+    <string name="end_time">END</string>
 
-    <string name="current_time">Now</string>
-    <string name="end_time">End</string>
     <string name="title_activity_fasting_tracker">Fasting tracker</string>
+    <string name="start_toggle">Start</string>
     <string name="btnStop">Breakfast</string>
-    <string name="title_activity_fasting_log">FastingLogActivity</string>
-    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
 
-    <string name="reminder_toggle_body">Temporarily deactivate all reminders </string>
 
-    <string-array name="menu_array">
+     <!--Reminder settings fragment strings: -->
+    <string name="reminder_toggle_body">Toggle for all fasting reminders</string>
+
+    <string-array name="array_weekdays">
+        <item>Monday</item>
+        <item>Tuesday</item>
+        <item>Wednesday</item>
+        <item>Thursday</item>
+        <item>Friday</item>
+        <item>Saturday</item>
+        <item>Sunday</item>
+    </string-array>
+
+    <string name="label_start_time">Start</string>
+    <string name="label_duration">Duration</string>
+    <string name="label_end_time">End</string>
+
+
+    <!--Navigation drawer string array:-->
+    <string-array name="array_menu">
         <item>Home</item>
         <item>Timer</item>
         <item>Reminders</item>
@@ -30,6 +45,6 @@
     <string name="navdrawer_open">Open navigation drawer</string>
     <string name="navdrawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 
 </resources>
