--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,18 +2,14 @@
 <resources>
 
     <string name="app_name">My Fasting Tracker</string>
-
     <string name="action_settings">Settings</string>
-
     <string name="current_time">NOW</string>
     <string name="end_time">END</string>
-
     <string name="title_activity_fasting_tracker">Fasting tracker</string>
     <string name="start_toggle">Start</string>
     <string name="btnStop">Breakfast</string>
 
-
-     <!--Reminder settings fragment strings: -->
+    <!-- Reminder settings fragment strings: -->
     <string name="reminder_toggle_body">Toggle for all fasting reminders</string>
 
     <string-array name="array_weekdays">
@@ -30,8 +26,7 @@
     <string name="label_duration">Duration</string>
     <string name="label_end_time">End</string>
 
-
-    <!--Navigation drawer string array:-->
+    <!-- Navigation drawer string array: -->
     <string-array name="array_menu">
         <item>Home</item>
         <item>Timer</item>
@@ -41,10 +36,13 @@
         <item>About</item>
     </string-array>
 
+    <!--reminder setting activity strings-->
+
 
     <string name="navdrawer_open">Open navigation drawer</string>
     <string name="navdrawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
-
+    <string name="title_activity_reminder_setting">ReminderSettingActivity</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
