--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,5 +47,6 @@
     <string name="title_activity_duration_picker_dialogue">DurationPickerDialogue</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_dialgoue_save_fast">Save to Log</string>
+    <string name="title_activity_fast_details">Fast Details</string>
 
 </resources>
